Bug 1298401 - Ensure that eNone scroll update types from the APZC don't prevent eUserAction scroll updates from getting sent. r=tnikkel a=ritu

MozReview-Commit-ID: 7b9QN8knQUM